<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/grey"
        android:padding="10dp"
        android:textSize="48sp"
        android:gravity="right|bottom"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/BtnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_7"
            android:onClick="onDigit"
            android:layout_margin="2dp"/>
        <Button
            android:id="@+id/BtnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_8"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            />
        <Button
            android:id="@+id/BtnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_9"
            android:layout_margin="2dp"
            android:onClick="onDigit"/>
        <Button
            android:id="@+id/BtnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Divide"
            android:layout_margin="2dp"
            android:onClick="onOperator"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/BtnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_4"
            android:onClick="onDigit"
            android:layout_margin="2dp"/>
        <Button
            android:id="@+id/BtnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_5"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            />
        <Button
            android:id="@+id/BtnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_6"
            android:layout_margin="2dp"
            android:onClick="onDigit"/>
        <Button
            android:id="@+id/BtnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Mulltiply"
            android:layout_margin="2dp"
            android:onClick="onOperator"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/BtnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_3"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            tools:ignore="NestedWeights" />
        <Button
            android:id="@+id/BtnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_2"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            />
        <Button
            android:id="@+id/BtnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_1"
            android:layout_margin="2dp"
            android:onClick="onDigit"/>
        <Button
            android:id="@+id/BtnSubstract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Substract"
            android:layout_margin="2dp"
            android:onClick="onOperator"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/BtnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dot"
            android:layout_margin="2dp"
            android:onClick="onDecimalPoint"
            />

        <Button
            android:id="@+id/BtnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_0"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            />
        <Button
            android:id="@+id/BtnCLR"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/clr"
            android:layout_margin="2dp"
            android:onClick="onClear"/>
        <Button
            android:id="@+id/BtnAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add"
            android:layout_margin="2dp"
            android:onClick="onOperator"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">


        <Button
            android:id="@+id/Equals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/equal"
            android:layout_margin="2dp"
            android:onClick="onEquals"/>

    </LinearLayout>


</LinearLayout>